# shopify-search

./: Cargo.toml  docker-compose.yaml  env.example
src/: lib.rs  main.rs
src/db/: pool.rs
src/models/: error.rs  mod.rs  product.rs  user.rs
src/repositories/: mod.rs  postgres_repository.rs
src/repositories/product_repository/: interface.rs  mod.rs  product_repository.rs
src/repositories/user_repository/: interface.rs  user_repository.rs
src/router/: auth_router.rs  mod.rs
src/services/user_service/: interface.rs  mod.rs  user_serviece.rs
src/utils/: mod.rs
src/utils/hugging_face/: embedding.rs  mod.rs
src/utils/shopify/: mod.rs  model.rs  product_search.rs
