[package]
name = "shopify-search"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls","chrono"] }
actix-web = "4.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
pgvector = { version = "0.3", features = ["sqlx"] }
rust_decimal = "1.27"